# ytArg

./: .gitignore  README.md  app.js  build.bat  electron-main.js  index.html  package-lock.json  package.json  preload.js  start.bat  start.sh
binaries/: Y2K MP3 Ripper_1.0.0_x64_en-US.msi
frontend/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
