[package]
name = "app"
version = "1.0.0"
description = "Y2K MP3 Ripper"
authors = []
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
dirs = "5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
